--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1017,13 +1017,13 @@ spa:
         # vetch: "Féverole"
         # wheat: "Blé"
         # winter_straw_cereal: "Céréales à paille d’hiver"
-      # name: "Typologie de culture (France)"
+      # name: "Typologies de culture (France)"
     guide_natures:
       items:
         # best_practices: "Bonnes pratiques"
         # regulations: "Réglementations"
         # specifications: "Spécifications"
-      # name: "Type de guides"
+      # name: "Types de guide"
     indicators:
       attributes:
         # choices: "Choix"
@@ -1455,6 +1455,14 @@ spa:
         # transformation: "Transformation"
         # viviparous_birth: "Reproduction (vivipare)"
       # name: "Types de procédures"
+    procedure_roles:
+      items:
+        # doer: "Faiseur"
+        # input: "Intrant"
+        # output: "Extrant"
+        # target: "Cible"
+        # tool: "Outil"
+      # name: "Rôles de procédure"
     product_nature_categories:
       attributes:
         # charge_account: "Compte de charge"
@@ -1848,7 +1856,7 @@ spa:
         # usual_vine_seedling: "Plant de vigne traditionnel"
         # wine: "Vin"
         # wine_crop: "Vigne"
-      # name: "Type de produits"
+      # name: "Types de produits"
     production_natures:
       attributes:
         # activity: "Activité"
@@ -1874,15 +1882,9 @@ spa:
         # winter_hard_wheat: "Blé dur d’hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
-      # name: "Type de production"
-    roles:
-      items:
-        # driver: "Conducteur"
-        # input: "Intrant"
-        # output: "Produit"
-        # target: "Cible"
-        # tool: "Outil"
-      # name: "Nom"
+      # name: "Types de production"
+    roles:  #?
+ #?
     taxes:
       attributes:
         # active: "actif"
@@ -1902,7 +1904,7 @@ spa:
         # fr_vat_null: "TVA 0.00%"
         # fr_vat_particular: "TVA 2.10%"
         # fr_vat_reduced: "TVA 5.00%"
-      # name: "Type de taxes"
+      # name: "Taxes"
     units:
       attributes: #?
       choices: #?
