--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -2005,8 +2005,7 @@ eng:
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       name: "Name"
-    roles:  #?
- #?
+    roles: #?
     taxes:
       attributes:
         # active: "actif"
@@ -2362,7 +2361,7 @@ eng:
     land_parcel: "Land parcel" #?
     manure: "Manure" #?
     manure_to_spread: "Manure to spread" #?
-    molecule: "Molecule" #?
+    matter: "Molecule" #?
     plow: "Plow" #?
     seeder: "Seeder" #?
     seeds: "Seeds" #?
