--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -864,6 +864,7 @@ eng:
     add_payment: "Add payment"
     add_phone: "Add phone number"
     # add_posology: "Ajouter une posologie"
+    # add_product: "Ajouter un produit"
     add_production: "Add production"
     add_quickly_a_line: "Add quickly a line of product" #?
     # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
