--- a/config/locales/fra/enumerize.yml
+++ b/config/locales/fra/enumerize.yml
@@ -1,5 +1,10 @@
 fra:
   enumerize:
+    activity:
+      nature:
+        auxiliaire: "Auxiliaire"
+        main: "Principale"
+        none: "―"
     cash:
       mode:
         bban: "Relevé d’identité bancaire (RIB)"
