--- a/config/locales/spa/enumerize.yml
+++ b/config/locales/spa/enumerize.yml
@@ -1,5 +1,10 @@
 spa:
   enumerize:
+    activity:
+      nature:
+        # auxiliaire: "Auxiliaire"
+        # main: "Principale"
+        # none: "―"
     asset: #?
     cash:
       mode:
