begin to add vine and wine procedures,nomenclatures... (in progress)

--- a/config/locales/eng/procedures.yml
+++ b/config/locales/eng/procedures.yml
@@ -37,6 +37,8 @@ eng:
     # indirect_silage: "Ensilage indirect"
     # mammal_herd_milking: "Traite d'un troupeau"
     # mammal_milking: "Traite d'un animal"
+    # manual_vine_harvest: "Vendange manuelle"
+    # mecanical_vine_harvest: "Vendange mécanique"
     # mineral_fertilizing: "Fertilisation minérale"
     # organic_fertilizing: "Fertilisation organique"
     # partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
@@ -65,6 +67,9 @@ eng:
     # forager: "Ensileuse"
     # forager_driver: "Conducteur d'ensileuse"
     # grains: "Grains"
+    # grape_picker: "Vendangeur"
+    # grape_reaper: "Machine à vendanger"
+    # grape_reaper_driver: "Conducteur de machine à vendanger"
     # grinded: "Résidu de culture"
     # grinder: "Broyeur"
     # harrow: "Herse"
@@ -87,6 +92,7 @@ eng:
     # plants: "Plants"
     # plants_to_fix: "Plants à implanter"
     # plow: "Charrue"
+    # pruner: "Sécateur"
     # second_child: "Second nouveau né"
     # seeder: "Semoir"
     # seeds: "Semences"
