--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -45,6 +45,7 @@ eng:
         catch: "Catch"
         # clean: "Nettoyer"
         consume: "Consume"
+        # cut: "Couper"
         drive: "Drive"
         # feed: "Nourrir"
         fertilize: "Fertilize"
@@ -57,6 +58,7 @@ eng:
         # milk: "Traire"
         move: "Move"
         # mow: "Faucher"
+        # pick: "Cueillir"
         plow: "Plow"
         produce: "Produce"
         sow: "Sow"
@@ -66,6 +68,7 @@ eng:
         store_fluid: "Store fluid"
         store_gaz: "Store gaz"
         store_liquid: "Store liquid"
+        # take_root: "S'enraciner"
         tow: "Tow"
       name: "Name"
     accounts:
@@ -1534,6 +1537,7 @@ eng:
         # plant_illness_treatment: "Protection des cultures"
         # plowing: "Labour"
         production: "Production" #?
+        # pruning: "Taille"
         # raking: "Hersage"
         reproduction: "Reproduction" #?
         # soil_enrichment: "Amendement"
@@ -1749,6 +1753,7 @@ eng:
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
         # granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
+        # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # grass_seed_25: "Semence de prairie sac de 25kg"
         # green_compost: "Compost de déchets verts"
@@ -1852,6 +1857,7 @@ eng:
         # wheat_straw: "Paille de blé"
         # wheat_straw_bales: "Bottes de paille de blé"
         # wine: "Vin"
+        # wine_tank: "Cuve à vin"
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
         # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
@@ -1923,6 +1929,7 @@ eng:
         # gas: "Gaz"
         grain: "Grain"
         # grain_crop: "Culture à graines"
+        # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
@@ -1963,6 +1970,7 @@ eng:
         wheat_crop: "Wheat crop" #?
         # wine: "Vin"
         # wine_crop: "Vigne"
+        # wine_tank: "Cuve à vin"
         young_cow: "Young cow" #?
       name: "Name"
     production_natures:
@@ -1999,14 +2007,16 @@ eng:
         # triticale: "Triticale"
         vegetal_crops: "Vegetal crops" #?
         vegetal_global_documentation: "Vegetal global documentation" #?
+        # vine: "Vigne"
         vinification: "Vinification" #?
+        # wine_storehouse: "Cave"
+        # winery: "Chai"
         # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       name: "Name"
-    roles:  #?
- #?
+    roles: #?
     taxes:
       attributes:
         # active: "actif"
@@ -2253,6 +2263,7 @@ eng:
         product: "Product"
         product_group: "Product group"
         property_title: "Property title"
+        # pruner: "Sécateur"
         # prunus: "Prunier"
         # qualital: "Qualital"
         # quality: "Quality"
