--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -9,6 +9,7 @@ spa:
         # catch: "Atteler"
         # clean: "Nettoyer"
         # consume: "Consommer"
+        # cut: "Couper"
         # drive: "Conduire"
         # feed: "Nourrir"
         # fertilize: "Fertiliser"
@@ -21,6 +22,7 @@ spa:
         # milk: "Traire"
         # move: "Se déplacer"
         # mow: "Faucher"
+        # pick: "Cueillir"
         # plow: "Labourer"
         # produce: "Produire"
         # sow: "Semer"
@@ -30,6 +32,7 @@ spa:
         # store_fluid: "Stocker du vrac solide"
         # store_gaz: "Stocker du gaz"
         # store_liquid: "Stocker du vrac liquide"
+        # take_root: "S'enraciner"
         # tow: "Tracter"
       # name: "Compétences"
     accounts:
@@ -1448,6 +1451,7 @@ spa:
         # plant_fertilisation: "Fertilisation"
         # plant_illness_treatment: "Protection des cultures"
         # plowing: "Labour"
+        # pruning: "Taille"
         # raking: "Hersage"
         # soil_enrichment: "Amendement"
         # sowing: "Semis"
@@ -1660,6 +1664,7 @@ spa:
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
         # granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
+        # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # grass_seed_25: "Semence de prairie sac de 25kg"
         # green_compost: "Compost de déchets verts"
@@ -1763,6 +1768,7 @@ spa:
         # wheat_straw: "Paille de blé"
         # wheat_straw_bales: "Bottes de paille de blé"
         # wine: "Vin"
+        # wine_tank: "Cuve à vin"
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
         # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
@@ -1818,6 +1824,7 @@ spa:
         # gas: "Gaz"
         # grain: "Céréale"
         # grain_crop: "Culture à graines"
+        # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
@@ -1856,6 +1863,7 @@ spa:
         # usual_vine_seedling: "Plant de vigne traditionnel"
         # wine: "Vin"
         # wine_crop: "Vigne"
+        # wine_tank: "Cuve à vin"
       # name: "Types de produits"
     production_natures:
       attributes:
@@ -1878,13 +1886,15 @@ spa:
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         # triticale: "Triticale"
+        # vine: "Vigne"
+        # wine_storehouse: "Cave"
+        # winery: "Chai"
         # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       # name: "Types de production"
-    roles:  #?
- #?
+    roles: #?
     taxes:
       attributes:
         # active: "actif"
@@ -2130,6 +2140,7 @@ spa:
         # product: "Produit"
         # product_group: "Groupe de produit"
         # property_title: "Titre de propriété"
+        # pruner: "Sécateur"
         # prunus: "Prunier"
         # qualital: "Qualital"
         # quality: "Quality"
