--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -110,8 +110,8 @@ fra:
       # show: "Show backend/cells/collected taxes cell"
     backend/cells/cropping_plan_cells:
       # show: "Show backend/cells/cropping plan cell"
-    backend/cells/cropping_plan_on_cultivable_land_parcels_cells:
-      # show: "Show backend/cells/cropping plan on cultivable land parcels cell"
+    backend/cells/cropping_plan_on_cultivable_zones_cells:
+      # show: "Show backend/cells/cropping plan on cultivable zones cell"
     backend/cells/current_stocks_by_product_nature_cells:
       # show: "Show backend/cells/current stocks by product nature cell"
     backend/cells/elapsed_interventions_times_by_activities_cells:
@@ -703,7 +703,7 @@ fra:
     # backend/cells/calendar_cells: "Backend/cells/calendar cells"
     # backend/cells/collected_taxes_cells: "Backend/cells/collected taxes cells"
     # backend/cells/cropping_plan_cells: "Backend/cells/cropping plan cells"
-    # backend/cells/cropping_plan_on_cultivable_land_parcels_cells: "Backend/cells/cropping plan on cultivable land parcels cells"
+    # backend/cells/cropping_plan_on_cultivable_zones_cells: "Backend/cells/cropping plan on cultivable zones cells"
     # backend/cells/current_stocks_by_product_nature_cells: "Backend/cells/current stocks by product nature cells"
     # backend/cells/elapsed_interventions_times_by_activities_cells: "Backend/cells/elapsed interventions times by activities cells"
     # backend/cells/events_cells: "Backend/cells/events cells"
@@ -1079,7 +1079,7 @@ fra:
     critic_stock_min: "Stock minimum critique"
     critic_stocks: "Stocks sous le seuil critique"
     cropping_plan: "Assolement"
-    cropping_plan_on_cultivable_land_parcels: "Assolement (Parcelles culturales)"
+    cropping_plan_on_cultivable_zones: "Assolement (Parcelles culturales)"
     csv_statistics: "Statistiques à exporter au format CSV"
     cumul: "Cumul du total et du solde précédent N°%{number}"
     currency: "Devise"
