--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -112,8 +112,8 @@ fra:
       # show: "Show backend/cells/cropping plan cell"
     backend/cells/cropping_plan_on_cultivable_zones_cells:
       # show: "Show backend/cells/cropping plan on cultivable zones cell"
-    backend/cells/current_stocks_by_product_nature_cells:
-      # show: "Show backend/cells/current stocks by product nature cell"
+    backend/cells/current_stocks_by_variety_cells:
+      # show: "Show backend/cells/current stocks by variety cell"
     backend/cells/elapsed_interventions_times_by_activities_cells:
       # show: "Show backend/cells/elapsed interventions times by activities cell"
     backend/cells/events_cells:
@@ -704,7 +704,7 @@ fra:
     # backend/cells/collected_taxes_cells: "Backend/cells/collected taxes cells"
     # backend/cells/cropping_plan_cells: "Backend/cells/cropping plan cells"
     # backend/cells/cropping_plan_on_cultivable_zones_cells: "Backend/cells/cropping plan on cultivable zones cells"
-    # backend/cells/current_stocks_by_product_nature_cells: "Backend/cells/current stocks by product nature cells"
+    # backend/cells/current_stocks_by_variety_cells: "Backend/cells/current stocks by variety cells"
     # backend/cells/elapsed_interventions_times_by_activities_cells: "Backend/cells/elapsed interventions times by activities cells"
     # backend/cells/events_cells: "Backend/cells/events cells"
     # backend/cells/guide_evolution_cells: "Backend/cells/guide evolution cells"
@@ -1086,7 +1086,7 @@ fra:
     currency_with_code: "%{code} - %{name}"
     current: "En cours"
     current_letter: "Lettre en cours\_: %{letter}"
-    current_stocks_by_product_nature: "État des stocks"
+    current_stocks_by_variety: "État des stocks"
     data_to_export: "Données à exporter"
     data_to_extract: "Données à extraire"
     dates: "Saisissez les dates de début et de fin de la période"
