--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1159,6 +1159,8 @@ eng:
             # raw: "Etat sauvage"
         dry_matter_rate: #?
         fat_matters_concentration: #?
+        figure:
+          choices: #?
         freezing_point_temperature: #?
         geographic_coordinate: #?
         hundred_grain_mass: #?
