--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -516,9 +516,10 @@ fra:
     content_indicator_unit: "Content indicator unit"
     content_maximal_quantity: "Content maximal quantity"
     content_nature: "Content nature"
-    contour: "Silhouette"
+    contour: "Silhouette" #?
     coordinate: "Coordonnée"
     # coordinate_columns: "Coordinate columns"
+    # coproducer: "Coproducer"
     country: "Pays"
     created_at: "Date et heure de création"
     created_on: "Date de création"
@@ -691,7 +692,6 @@ fra:
     guide: "Référentiel"
     harvest_year: "Année de récolte"
     has_downpayment: "A un acompte"
-    # horizontal_rotation: "Horizontal rotation"
     iban: "IBAN"
     id: "ID"
     identification_number: "Numéro d’identification"
@@ -815,7 +815,6 @@ fra:
     name_1_to_2: "Nom «\_Personne 1 vers Personne 2\_»" #?
     name_2_to_1: "Nom «\_Personne 2 vers Personne 1\_»" #?
     nature: "Type"
-    nature_name: "Nature name"
     natures: "Natures"
     net_mass: "Masse nette"
     net_surface_area: "Surface"
