--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1086,6 +1086,8 @@ jpn:
             # raw: "Etat sauvage"
         dry_matter_rate: #?
         fat_matters_concentration: #?
+        figure:
+          choices: #?
         freezing_point_temperature: #?
         geographic_coordinate: #?
         hundred_grain_mass: #?
