--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1081,6 +1081,8 @@ spa:
             # raw: "Etat sauvage"
         dry_matter_rate: #?
         fat_matters_concentration: #?
+        figure:
+          choices: #?
         freezing_point_temperature: #?
         geographic_coordinate: #?
         hundred_grain_mass: #?
