Introduces new nomenclatures in order to enhance indicators capabilities

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1004,7 +1004,6 @@ arb:
     # analytics: "Analytiques"
     # animal: "Animal"
     # animal_bar: "Animaux par lot"
-    # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
@@ -1318,6 +1317,7 @@ arb:
     # groups: "Groupes"
     # guides: "Référentiels"
     # harvested_at: "Récolté le"
+    # healthy: "Phase du bioprocessus de maladie d’un animal"
     help: "المساعدة"
     hint: "تلميح&nbsp;: %{value}"
     # historic: "Historique"
