--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -937,7 +937,6 @@ fra:
     analytics: "Analytiques"
     animal: "Animal"
     animal_bar: "Animaux par lot"
-    animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
     animal_group_tabbox:
       animals: "Animaux du lot"
       cares: "Soins réalisés sur le lot"
@@ -1208,6 +1207,7 @@ fra:
     groups: "Groupes"
     guides: "Référentiels"
     harvested_at: "Récolté le"
+    healthy: "Phase du bioprocessus de maladie d’un animal"
     help: "Aide"
     hint: "Astuce\_: %{value}"
     historic: "Historique"
