--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -913,7 +913,6 @@ spa:
     # analytics: "Analytiques"
     # animal: "Animal"
     # animal_bar: "Animaux par lot"
-    # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
@@ -1202,6 +1201,7 @@ spa:
     # groups: "Groupes"
     # guides: "Référentiels"
     # harvested_at: "Récolté le"
+    # healthy: "Phase du bioprocessus de maladie d’un animal"
     help: "Ayuda"
     # hint: "Astuce\_: %{value}"
     # historic: "Historique"
