--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1184,8 +1184,8 @@ arb:
     # currency_precision: "Nombre de décimales"
     currency_rate: "سعر الصرف"
     # current_amount: "Montant actuel"
-    # current_animal_disease_state: "État de santé actuel"
     current_financial_year: "الفترة المحاسبية الحالية" #?
+    # current_healthy: "État de santé actuel"
     # current_localization: "Current localization"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
