--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -231,13 +231,13 @@ eng:
         ZMK: "Zambian Kwacha"
         ZWL: "Zimbabwe Dollar"
       indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
@@ -851,13 +851,13 @@ eng:
         zone: "Zone"
     product:
       content_indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
@@ -929,13 +929,13 @@ eng:
         zone: "Zone"
     product_indicator_datum:
       indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
@@ -1036,13 +1036,13 @@ eng:
         zone: "Zone"
     product_nature_variant_indicator_datum:
       indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
@@ -1075,13 +1075,13 @@ eng:
         worker: "Worker"
         zone: "Zone"
       indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
@@ -1097,13 +1097,13 @@ eng:
         urea_concentration: "Urea concentration"
     sale_item:
       indicator_name:
-        animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
         cells_concentration: "Cells concentration"
         clostridial_spores_concentration: "Clostridial spores concentration"
         fat_matters_concentration: "Fat matters concentration"
         freezing_point_temperature: "Freezing point temperature"
         ground_appearance: "Ground appearance"
+        healthy: "Animal disease state"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production"
         inhibitors_presence: "Inhibitors presence"
