--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -274,6 +274,18 @@ fra:
         straw_cereal_crops: "Céréales à paille"            # vegetal_crops
         vegetal_crops: "Production végétale"
         vine_wine: "Vigne et vin"                          # vegetal_crops
+    animal_life_states:
+      name: "États du dévelopment animal"
+      items:
+        aging: "Adulte"
+        first_growth: "Première croissance"
+        second_growth: "Seconde croissance"
+        senescence: "Sénescence"
+    cation_exchange_capacity_analysis_methods:
+      name: "Méthodes d'analyse de la capacité d'échange cationique"
+      items:
+        cobaltihexamine: "Cobaltihexamine"
+        metson: "Metson"
     charts_of_accounts:
       name: "Plans de comptes"
       items:
@@ -792,8 +804,8 @@ fra:
         pressure: "Pression"
         specific_volume: "Volume spécifique"
         surface_area: "Superficie"
-        # surface_area_density: "Surface area density"
-        temperature: "Temperature"
+        surface_area_density: "Densité surfacique"
+        temperature: "Température"
         time: "Temps"
         volume: "Volume"
     document_categories:
@@ -850,7 +862,7 @@ fra:
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
-        # tax_assessment: "Tax assessment"
+        tax_assessment: "Avis d'imposition"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
         vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
@@ -889,6 +901,17 @@ fra:
         public_interest_group: "Groupement d’intérêt public" # legal_entity
         sir: "Monsieur"                                    # person
         syndicate: "Syndicat"                              # legal_entity
+    figures:
+      name: "Formes"
+      items:
+        biped: "Bipède"
+        building: "Bâtiment"
+        cuboid: "Cuboïde"
+        cylinder: "Cylindre"
+        hemispheroid: "Hemisphéroïde"
+        quadruped: "Quadrupède"
+        spheroid: "Sphéroïde"
+        vehicle: "Véhicule"
     france_crops_sets:
       name: "Typologies de culture (France)"
       attributes:
@@ -954,114 +977,8 @@ fra:
           individual: "Individu"
           whole: "Population"
         # unit: # Choices comes from nomenclature: units
-      item_lists:
-        animal_disease_state:
-          choices:
-            healthy: "En bonne santé"
-            sick: "Malade"
-        animal_life_state:
-          choices:
-            first_growth: "Première croissance"
-            second_growth: "Seconde croissance"
-            aging: "Adulte"
-        cation_exchange_capacity_analysis_method:
-          choices:
-            metson: "Metson"
-            cobaltihexamine: "Cobaltihexamine"
-        cultural_plant_residue:
-          choices:
-            buried: "Enfouis"
-            exported: "Exportés"
-            burned: "Brûlés"
-        cultural_soil_state:
-          choices:
-            covered: "Couvert végétal"
-            raw: "Etat sauvage"
-            nude: "Nu"
-            plowed: "Guéret"
-            grown: "Culture"
-        figure:
-          choices:
-            # building: "Building"
-            # cylinder: "Cylinder"
-            # cuboid: "Cuboid"
-            # hemispheroid: "Hemispheroid"
-            # spheroid: "Spheroid"
-            # biped: "Biped"
-            # quadruped: "Quadruped"
-        inhibitors_presence:
-          choices:
-            negative: "Negatif"
-            positive: "Positif"
-        leaf_count:
-          choices:
-            # 0: "0"
-            # 1: "1"
-            # 2: "2"
-            # 3: "3"
-            # 4: "4"
-            # 5: "5"
-            # 6: "6"
-            # 7: "7"
-            # 8: "8"
-        mammalia_born_condition:
-          choices:
-            without_help: "Sans aide"
-            few_help: "Avec un peu d’aide"
-            great_help: "Avec des difficultés"
-            caesarean: "Par césarienne"
-            cutting_calf: "En découpant le veau"
-        mammalia_lactation_state:
-          choices:
-            lactation: "Lactation"
-            depletion: "Tarie"
-        mammalia_reproduction_state:
-          choices:
-            back_heat: "Retour de chaleur"
-            heat: "Chaleur"
-            pregnancy: "Pleine"
-        mammalia_twins_condition:
-          choices:
-            none: "N/A"
-            twins: "Jumeaux"
-            triplets: "Triplés"
-        phosphorus_analysis_method:
-          choices:
-            dyer: "Dyer"
-            joret_hebert: "Joret-Hebert"
-            olsen: "Olsen"
-        plant_life_state:
-          choices:
-            germination: "Germination"
-            tillering: "Tallage"
-            bolting: "Montaison"
-            maturity: "Maturité"
-            senescence: "Senescence"
-        plant_reproduction_state:
-          choices:
-            # swelling: "Swelling"
-            heading: "Epiaison"
-            flowering: "Floraison"
-            grain_maturity: "Maturité du grain"
-            grain_senescence: "Senescence du grain"
-        sex:
-          choices:
-            male: "Mâle"
-            female: "Femelle"
-            undefined: "Indéfini"
-        woodstock_variety:
-          choices:
-            rgm: "Rgm"
-            gravesac: "Gravesac"
-            fercal: "Fercal"
-            so4: "So4"
-            3309c: "3309c"
-            p1103: "P1103"
-            99r: "99r"
-            110r: "110r"
       items:
         aluminium_concentration: "Teneur en Aluminium"
-        animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
         application_width: "Largeur de travail"
         available_water_capacity_per_area: "Réserve utile (RU)"
@@ -1072,37 +989,34 @@ fra:
         cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
-        cultural_plant_residue: "Résidus de culture"
-        cultural_soil_state: "Etat cultural du sol"
         dry_matter_rate: "Taux de matière sèche"
-        economical_milk_index: "INEL (INdex Économique Laitier)"
-        energy: "Energie"
-        fat_matter_concentration_index: "TB (Taux Butyreux)"
+        economical_milk_index: "Index économique laitier (INEL)"
+        energy: "Énergie"
+        fat_matter_concentration_index: "Taux butyreux (TB)"
         fat_matters_concentration: "Teneur en matières grasses"
         fertility_index: "Index de fertilité"
-        # figure: "Figure"
+        figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
-        grain_yield_per_area: "Rendement en grain par unité de surface"
+        healthy: "Phase du bioprocessus de maladie d’un animal"
         height: "Hauteur"
-        # horizontal_rotation: "Horizontal rotation"
+        horizontal_rotation: "Rotation horizontale"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
-        leaf_count: "Nombre de talles"
+        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        lactating: "En lactation"
+        last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
         lipolysis: "Lipolyse"
-        livestock_unit: "UGB (Unité de Gros Bétail)"
-        magnesium_concentration: "Teneur en Magnesium"
-        mammalia_born_condition: "condition de naissance"
-        mammalia_born_cycle: "cycle de naissance"
-        mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+        livestock_unit: "Unité de gros bétail (UGB)"
+        magnesium_concentration: "Teneur en Magnésium"
+        mammalia_birth_condition: "Condition de naissance"
+        mammalia_birth_count: "Cycle de naissance"
         mammalia_reproduction_event_abortion: "Avortement"
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        mammalia_twins_condition: "Naissance de jumeaux"
-        manganese_concentration: "Teneur en Manganese"
+        manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
@@ -1115,29 +1029,34 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
-        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         organic_matter_concentration: "Teneur en matière organique"
-        ph: "ph"
         phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
-        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
+        plants_density: "Densité de plantation"
+        plants_rows_interval: "Intervalle inter-rangs"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
-        protein_concentration_index: "TP (Taux Protéïque)"
+        potential_hydrogen: "Potentiel hydrogène (pH)"
+        protein_concentration_index: "Taux protéïque (TP)"
         protein_matters_concentration: "Teneur en matières protéïques"
         reproductor: "Reproducteur"
+        residue_elimination_method: "Méthode d'élimination des résidus"
+        row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
+        soil_cultural_state: "État cultural du sol"
         soil_depth: "Profondeur du sol"
+        soil_nature: "Type de sol"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
-        straw_yield_per_area: "Rendement en tige par unité de surface"
+        subsoil_nature: "Type de sous-sol"
         sulfur_concentration: "Teneur en Soufre"
         temperature: "Température"
         thousand_grain_mass: "Poids de mille grains"
+        tiller_count: "Nombre de talles"
         total_bacteria_concentration: "Dénombrement des germes totaux"
-        unique_synthesis_index: "ISU (Index de Synthèse Unique)"
+        unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
@@ -1271,6 +1190,20 @@ fra:
         urd: "Ourdou"
         uzb: "Ou(s)zbek"
         vie: "Vietnamien"
+    mammalia_birth_conditions:
+      name: "Conditions de naissance mammale"
+      items:
+        caesarean: "Par césarienne"
+        few_help: "Avec un peu d’aide"
+        great_help: "Avec des difficultés"
+        newborn_cutting: "En découpant le nouveau-né"
+        without_help: "Sans aide"
+    mammalia_reproduction_states:
+      name: "États de la reproduction mammale"
+      items:
+        back_heat: "Retour de chaleur"
+        heat: "Chaleur"
+        pregnancy: "Pleine"
     nmp_methods:
       # name: "Nmp methods"
       items:
@@ -1807,6 +1740,33 @@ fra:
         # valley_terrace_winter_barley_crop_max: "Valley terrace winter barley crop max"
         # valley_terrace_winter_barley_crop_med: "Valley terrace winter barley crop med"
         # valley_terrace_winter_barley_crop_min: "Valley terrace winter barley crop min"
+    phosphorus_analysis_methods:
+      name: "Méthodes d'analyse du phosphore"
+      items:
+        dyer: "Dyer"
+        joret_hebert: "Joret-Hebert"
+        olsen: "Olsen"
+    plant_life_states:
+      name: "États du développement végétal"
+      items:
+        booting: "Montaison"
+        # development_of_fruit: "Development of fruit"
+        # flowering: "Flowering"
+        germination: "Germination"
+        # heading: "Heading"
+        # leaf_development: "Leaf development"
+        # ripening: "Ripening"
+        senescence: "Sénescence"
+        # stem_elongation: "Stem elongation"
+        tillering: "Tallage"
+    plant_reproduction_states:
+      name: "États de la reproduction végétale"
+      items:
+        flowering: "Floraison"
+        grain_maturity: "Maturité du grain"
+        grain_senescence: "Senescence du grain"
+        heading: "Épiaison"
+        # swelling: "Swelling"
     procedure_natures:
       name: "Types de procédures"
       attributes:
@@ -2286,6 +2246,47 @@ fra:
         winter_hard_wheat: "Blé dur d’hiver"
         winter_soft_wheat: "Blé tendre d’hiver"
         without_crop: "Hors culture"
+    residue_elimination_methods:
+      name: "Méthodes d'élimination des résidus"
+      items:
+        burning: "Combustion"
+        burying: "Enfouissement"
+        evacuation: "Évacuation"
+    sexes:
+      name: "Sexes"
+      items:
+        female: "Femelle"
+        hermaphrodite: "Hermaphrodite"
+        male: "Mâle"
+    soil_cultural_states:
+      name: "États culturaux du sol"
+      items:
+        covered: "Couvert végétal"
+        grown: "En culture"
+        nude: "Nu"
+        plowed: "Guéret"
+        raw: "Etat sauvage"
+    soil_natures:
+      name: "Types de sols"
+      items:
+        aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
+        black_valley_soil: "Terres noires de vallées"
+        champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
+        chesnut_red_soil: "Terres rouges à chataigniers"
+        clay_limestone_soil: "Sol argilo-calcaire (Groies)"
+        clay_soil: "Terre d’argile lourde"
+        flap_silt_soil: "Limons battants"
+        granite_arena_soil: "Sol sur arène granitique"
+        hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
+        sand_soil: "Sol sableux"
+        sandy_clay_loam_soil: "Sol limono-argileux"
+        sandy_clay_soil: "Sol argilo-sableux"
+        silt_schist_soil: "Limons sur schiste ou gneiss"
+        silt_soil: "Limon"
+        silty_clay_loam_soil: "Sol limono-argileux"
+        silty_clay_soil: "Sol argilo-limoneux"
+        swamp_peaty_soil: "Terre de marais tourbeux"
+        valley_terrace_soil: "Sols de terrasse de vallée"
     taxes:
       name: "Taxes"
       attributes:
