add wine_transfer with demo data and clean code.

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1381,6 +1381,7 @@ arb:
         # animal_illness_treatment: "Traitement des maladies animales"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # fermentation: "Fermentation"
         # grinding: "Broyage"
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
@@ -1397,6 +1398,7 @@ arb:
         # soil_enrichment: "Amendement"
         # sowing: "Semis"
         # tillage: "Travail du sol"
+        # transfer: "Transfert"
         # transformation: "Transformation"
         # viviparous_birth: "Reproduction (vivipare)"
       # name: "Types de procédures"
