--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1378,6 +1378,7 @@ spa:
         # animal_illness_treatment: "Traitement des maladies animales"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # fermentation: "Fermentation"
         # grinding: "Broyage"
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
@@ -1394,6 +1395,7 @@ spa:
         # soil_enrichment: "Amendement"
         # sowing: "Semis"
         # tillage: "Travail du sol"
+        # transfer: "Transfert"
         # transformation: "Transformation"
         # viviparous_birth: "Reproduction (vivipare)"
       # name: "Types de procédures"
